--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
-    #Napraviti neku formu ispod ovog paragrafa.
     <p>Napravi login formu</p>
-
+    <form action="">
+        <input type="text" name="input1" id="input1">
+        <br>
+        <input type="text" name="input2" id="input2">
+    </form>
 </body>
 
 </html>
