--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <br>
         <input type="text" name="input2" id="input2">
     </form>
+
+    <p>Lets make a collision!</p>
 </body>
 
 </html>
