dodat input u auth branch index.html file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <input type="text" name="input1" id="input1">
         <br>
         <input type="text" name="input2" id="input2">
+        <br>
+        <input type="text" name="input3" id="input3">
     </form>
 </body>
 
